Translate comments and markdown to English
Updated markdown cells and comments to improve clarity and consistency in English.

--- a/fit/1_xyztoef.ipynb
+++ b/fit/1_xyztoef.ipynb
@@ -5,7 +5,7 @@
    "id": "973e3732",
    "metadata": {},
    "source": [
-    "## 基于拟合原子极化率计算氨基酸极化能"
+    "## Amino-acid polarization energy estimation based on fitted atomic polarizabilities"
    ]
   },
   {
@@ -13,7 +13,7 @@
    "id": "308890ac",
    "metadata": {},
    "source": [
-    "### 处理带有背景电荷信息的xyz文件，并生成带有总电场、平行电场、垂直电场信息的ef文件"
+    "### Convert XYZ files with background charges into EF files containing total, parallel, and perpendicular electric-field descriptors"
    ]
   },
   {
@@ -56,11 +56,11 @@
     "}\n",
     "\n",
     "def process_xyz_to_ef(xyz_file, ef_dir, ALA):\n",
-    "    \"\"\"处理单个 .xyz 文件并生成对应的 .ef 文件\"\"\"\n",
+    "    \"\"\"Process a single .xyz file and write the corresponding .ef file.\"\"\"\n",
     "    with open(xyz_file, 'r') as f:\n",
     "        lines = f.readlines()\n",
     "\n",
-    "    n_atoms = int(lines[0].strip())  # 读取原子数\n",
+    "    n_atoms = int(lines[0].strip())  # Number of atoms\n",
     "\n",
     "    coord_dict = {\n",
     "        atom_i: [float(parts[1]), float(parts[2]), float(parts[3])]\n",
@@ -68,7 +68,7 @@
     "        for parts in [line.split()]\n",
     "    }\n",
     "\n",
-    "    # 计算原子方向向量\n",
+    "    # Compute bond-direction unit vectors\n",
     "    result = []\n",
     "    for (a1, a2) in ALA:\n",
     "        x1, y1, z1 = coord_dict[a1]\n",
@@ -80,7 +80,7 @@
     "        dz /= length\n",
     "        result.append([a1, x1, y1, z1, dx, dy, dz])\n",
     "\n",
-    "    # 读取电荷\n",
+    "    # Read background charges\n",
     "    charge = []\n",
     "    for line in lines[2 + n_atoms + 1:]:\n",
     "        parts = line.split()\n",
@@ -114,7 +114,7 @@
     "            i_E_total_norm, i_E_paral_norm, i_E_verti_norm\n",
     "        ])\n",
     "\n",
-    "    # 写出 .ef 文件\n",
+    "    # Write the .ef file\n",
     "    os.makedirs(ef_dir, exist_ok=True)\n",
     "    base_name = os.path.basename(xyz_file)\n",
     "    ef_file = os.path.join(ef_dir, os.path.splitext(base_name)[0] + \".ef\")\n",
@@ -129,14 +129,14 @@
     "\n",
     "\n",
     "def batch_process_xyz(base_dir, amino_name):\n",
-    "    \"\"\"自动根据氨基酸名找到连接表，并批量处理 xyz 文件 → ef 文件\"\"\"\n",
+    "    \"\"\"Look up the connectivity table by amino-acid name and batch-convert xyz files to ef files.\"\"\"\n",
     "    if amino_name not in AMINO_CONNECT:\n",
-    "        print(f\"❌ 未找到氨基酸 {amino_name} 的连接信息，请先在 AMINO_CONNECT 字典中定义。\")\n",
+    "        print(f\"❌ Connectivity for amino acid {amino_name} is not defined. Please add it to the AMINO_CONNECT dictionary first.\")\n",
     "        return\n",
     "\n",
     "    ALA = AMINO_CONNECT[amino_name]\n",
     "\n",
-    "    # 构造氨基酸路径\n",
+    "    # Build amino-acid directory paths\n",
     "    amino_dir = os.path.join(base_dir, amino_name)\n",
     "    xyz_dir = os.path.join(amino_dir, \"xyz\")\n",
     "    ef_dir = os.path.join(amino_dir, \"ef\")\n",
@@ -144,18 +144,18 @@
     "\n",
     "    xyz_files = [os.path.join(xyz_dir, f) for f in os.listdir(xyz_dir) if f.endswith(\".xyz\")]\n",
     "    if not xyz_files:\n",
-    "        print(f\"⚠️ 在 {xyz_dir} 未找到任何 .xyz 文件。\")\n",
+    "        print(f\"⚠️ No .xyz files found in {xyz_dir}.\")\n",
     "        return\n",
     "\n",
-    "    print(f\"🔍 处理氨基酸 {amino_name} ，共 {len(xyz_files)} 个文件...\\n\")\n",
+    "    print(f\"🔍 Processing amino acid {amino_name}: {len(xyz_files)} file(s)...\\n\")\n",
     "\n",
-    "    for xyz_file in tqdm(xyz_files, desc=f\"{amino_name} 处理中\"):\n",
+    "    for xyz_file in tqdm(xyz_files, desc=f\"Processing {amino_name}\"):\n",
     "        try:\n",
     "            ef_path = process_xyz_to_ef(xyz_file, ef_dir, ALA)\n",
     "        except Exception as e:\n",
-    "            print(f\"❌ 文件处理失败：{xyz_file}\\n   错误：{e}\\n\")\n",
+    "            print(f\"❌ Failed to process file: {xyz_file}\\n   Error: {e}\\n\")\n",
     "\n",
-    "    print(f\"\\n✅ {amino_name} 处理完成，结果保存在：{ef_dir}\\n\")\n"
+    "    print(f\"\\n✅ {amino_name} Finished. Results saved to: {ef_dir}\\n\")\n"
    ]
   },
   {
@@ -165,7 +165,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_dir = \"/mnt/xyz_folder\"\n",
+    "base_dir = \"example\"  # Relative path to the example dataset folder\n",
     "\n",
     "for amino in [\"ALA\",]:\n",
     "    batch_process_xyz(base_dir, amino)\n"
